--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>Gram's Garage</h1>
-        <img src = "http://imgur.com/a/m5iYu" alt = "Portrait" width = "200" height = "200">
+        <img src = "http://i.imgur.com/hxvoaxX.jpg" alt = "Portrait" width = "200" height = "200">
         <p class="view"><a href="https://github.com/gramschmidt">View My GitHub Profile</a></p>
 
       </header>
