--- a/index.html
+++ b/index.html
@@ -11,12 +11,39 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <style>
+      ul {
+          list-style-type: none;
+          margin: 0;
+          padding: 0;
+          overflow: hidden;
+          background-color: #f1f1f1;
+         }
+
+      li {
+          float: right;
+         }
+
+      li a {
+          display: block;
+          color: black;
+          text-align: center;
+          padding: 14px 16px;
+          text-decoration: none;
+           }
+
+      li a:hover {
+          background-color: #555;
+          }
+    </style>
   </head>
   <body>
     <div class="wrapper">
       <header>
-        <h1>Gram's Garage</h1>
-        <p class="view"><a href="https://github.com/gramschmidt">View My GitHub Profile</a></p>
+        <ul>
+          <li style="float:left"><a class="active" href="#home">Gram's Garage</a></li>
+          <li><a href="#news">Profile</a></li>
+        </ul>
 
       </header>
       <section>
