Messing With Header

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <ul>
           <li style="float:left"><a class="active" href="#home">Gram's Garage</a></li>
           <li><a href="#news">Profile</a></li>
+          <li><a href="#news">Projects</a></li>
         </ul>
 
       </header>
