--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <header>
         <ul>
           <li style="float:left"><a class="active" href="#home">Gram's Garage</a></li>
-          <li><a href="#news">Profile</a></li>
+          <li><a href="https://github.com/gramschmidt">Profile</a></li>
           <li><a href="#news">Projects</a></li>
         </ul>
 
