--- a/index.html
+++ b/index.html
@@ -18,12 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/gramschmidt">View on GitHub</a>
 
-          <ul>
-            <li><a class="active" href="#home">Gram's Garage</a></li>
-            <li><a href="#news">News</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li><a href="#about">About</a></li>
-          </ul>
+          <h>Gram's Garage</h>
+          <h><a href = "https://gramschmidt.github.io/">Visit My GitHub Page</a></h>
 
         </header>
     </div>
