--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/gramschmidt">View on GitHub</a>
 
-          <h>Gram's Garage</h>
-          <h><a href = "https://gramschmidt.github.io/">Visit My GitHub Page</a></h>
+          <p>Gram's Garage</p>
+          <p><a href = "https://gramschmidt.github.io/">Visit My GitHub Page</a></p>
 
         </header>
     </div>
