--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
-<p>Hey guys!  I've taken a few programming classes through the years, but really only learned to get by.  I guess by making this I am going to try again in earnest to figure some stuff out.  On GitHub I am going to try and make a website or two and hopefully some third party tools for EVE Online.  It's probably not going to be pretty, but feel free to take a look at some of the stuff I am doing and feel free to let me know what I can do better or if I should stick to my day job. <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>Hey guys!  I've taken a few programming classes through the years, but really only learned to get by.  I guess by making this I am going to try again in earnest to figure some stuff out.  On GitHub I am going to try and make a website or two and hopefully some third party tools for EVE Online.  It's probably not going to be pretty, but feel free to take a look at some of the stuff I am doing and feel free to let me know what I can do better or if I should stick to my day job.</p>
 
       </section>
     </div>
