--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/gramschmidt">View on GitHub</a>
 
-          <p>Gram's Garage</p>
+          <h2>Gram's Garage</h2>
 
         </header>
     </div>
