--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="Gramschmidt.GitHub.io : Github Homepage">
 
-    <link rel="stylesheet" type="text/css" media="screen" href=stylesheet.css>
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
     <title>Gramschmidt.GitHub.io</title>
   </head>
